Fix overflow in translate page

--- a/src/subtitulamos/resources/assets/css/translate.scss
+++ b/src/subtitulamos/resources/assets/css/translate.scss
@@ -258,6 +258,7 @@
 
   #sequences {
     margin: 0 auto;
+    overflow-x: auto;
 
     &.font-family-rubik {
       *:not(i) {
